--- a/app/src/main/res/menu/manga_info.xml
+++ b/app/src/main/res/menu/manga_info.xml
@@ -20,4 +20,8 @@
         android:title="@string/action_add_to_home_screen"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/action_migrate"
+        android:title="@string/migrate"
+        app:showAsAction="never"/>
+
 </menu>
